--- a/index.html
+++ b/index.html
@@ -12,28 +12,32 @@
 </head>
 <body>
 
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
+  <main>
+    <div class="result-summary">
+      <div class="reults">
+        <h1 class="section-title">
+          Your Result
+        </h1>
+        <p class="result-score"><span>76</span>of 100</p>
+        <div>
+          <p class="result-rank">Great</p>
+          <p>You scored higher than 65% of the people who have taken these tests.</p>
+        </div>
+      </div>
+      Summary
+      Reaction
+      80 / 100
+      Memory
+      92 / 100
+      Verbal
+      61 / 100
+      Visual
+      72 / 100
+      Continue
+      
+    <div class="summary"></div>
+    </div>
+      </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
