added reaction section

--- a/index.html
+++ b/index.html
@@ -29,10 +29,17 @@
         <h2 class="sectin-title">
           Summary
         </h2>
+        <div class="gird-flow">
+          <div class="summary-item">
+            <div class="flex-group">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20"><path stroke="#F55" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.25" d="M10.833 8.333V2.5l-6.666 9.167h5V17.5l6.666-9.167h-5Z"/></xmlns=></svg>
+              <h3 class="summary-item-title">Reaction</h3>
+              <p class="summary-score"><span>80</span> / 100</span></p>
+            </div>
+          </div>
+        </div>
       </div>
       
-      Reaction
-      80 / 100
       Memory
       92 / 100
       Verbal
