--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="summary grid-flow" dara-spacing="large">
-        <h2 class="sectin-title">
+        <h2 class="section-title">
           Summary
         </h2>
         <div class="gird-flow">
