--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
   <main>
     <div class="result-summary">
-      <div class="reults grid-flow" data-spacing="large">
+      <div class="reults grid-flow"
+          data-spacing="large">
         
         <h1 class="section-title">
           Your Result
@@ -25,7 +26,8 @@
           <p>You scored higher than 65% of the people who have taken these tests.</p>
         </div>
       </div>
-      <div class="summary grid-flow" dara-spacing="large">
+      <div class="summary grid-flow" 
+        data-spacing="large">
         <h2 class="section-title">
           Summary
         </h2>
