finly end commit

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h2 class="section-title">
           Summary
         </h2>
-        <div class="gird-flow">
+        <div class="grid-flow">
           <div class="summary-item" 
               data-item-type="accent-1">
             
